refactor: ColumnValue 추상화